# msg4r

./: .gitignore  CMakeLists.txt  README.en.md  README.md  build-vs2010.bat  build-win64.bat  build.bat
doc/: index.md
include/: msg4r.h  msg4r.hpp
src/: msg4r.cpp
test/: msg4r-binary-test.cpp  msg4r-compiler-test.cpp  msg4r-endianness-test.cpp  msg4r-inheritance-test.cpp  msg4r-int-test.cpp  msg4r-istream-test.cpp  msg4r-json-test.cpp  msg4r-list-test.cpp  msg4r-map-test.cpp  msg4r-number-parser-test.cpp  msg4r-pair-test.cpp  msg4r-poc-int-test.cpp  msg4r-set-test.cpp  msg4r-shared-ptr-test.cpp  msg4r-state-test.cpp  msg4r-streambuf-test.cpp  msg4r-string-test.cpp  msg4r-struct1-test.cpp  msg4r-struct2-test.cpp  msg4r-trump-test.cpp  msg4r-vector-test.cpp
tests/: msg4r-compiler-test.cpp  msg4r-inheritance-test.cpp  msg4r-istream-test.cpp  msg4r-map-test.cpp  msg4r-streambuf-test.cpp  msg4r-string-test.cpp  msg4r-trump-test.cpp  msg4r-vector-test.cpp
